--- a/学习路线.md
+++ b/学习路线.md
@@ -2,9 +2,17 @@
 
 <br>
 
-[python数据可视化可参考代码](https://blog.csdn.net/qq_41205771/article/details/98947659?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.nonecase&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.nonecase)
+- python数据可视化可参考代码
 
-<br>
+  <br>
+
+  [参考1](https://blog.csdn.net/fei347795790/article/details/89257220?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase)
+
+  <br>
+
+  [参考2](https://blog.csdn.net/qq_41205771/article/details/98947659?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.nonecase&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.nonecase)
+
+
 
 - **python**  
 
